# fano

./: README.md  pyproject.toml
.github/workflows/: black.yml  tests.yml
docs/: conf.py  index.rst  refs.bib
fano/: __init__.py
fano/photons/: __init__.py
fano/photons/areas/: __init__.py  _ionization.py  _ionization_test.py
